--- a/comprasTable/templates/Reportes/ValidacionTrae.html
+++ b/comprasTable/templates/Reportes/ValidacionTrae.html
@@ -73,7 +73,6 @@
                 { data: "fields.usuarioResponsableValidacion" },
                 { data: "fields.estadosValidacion" },
 
-
             ]
         });
 
@@ -255,7 +254,7 @@
     <!-- INICIO ENCABEZADO PROPUESTO -->
     <div class="row">
         <div class="col-md-12">
-            <div class="card">
+            <div class="card"  >
                 <div class="card-header">
                     <div class="row">
                         <div class="row">
@@ -409,7 +408,7 @@
                          <div class="form-group">
                         <label for="especificacionesTecnicas" class="col-sm-2 control-label">especificacionesTecnicas</label>
                         <div class="col-sm-12">
-                            <input type="text" class="form-control" id="especificacionesTecnicas" name="especificacionesTecnicas" placeholder="Enter espTecnicas"
+                            <input type="text" class="form-control" id="especificacionesTecnicas" name="especificacionesTecnicas" placeholder="Enter especificacionesTecnicas"
                                    value="" maxlength="150">
                         </div>
                     </div>
@@ -420,7 +419,7 @@
                            <div class="form-group">
                         <label for="usuarioResponsableValidacion_nombre" class="col-sm-2 control-label">usuarioResponsableValidacion</label>
                         <div class="col-sm-12">
-                            <input type="text" class="form-control" id="usuarioResponsableValidacion_nombre" name="usuarioResponsableValidacion_nombre" placeholder="Enter usuResp"
+                            <input type="text" class="form-control" id="usuarioResponsableValidacion_nombre" name="usuarioResponsableValidacion_nombre" placeholder="Enter usuarioResponsableValidacion_nombre"
                                    value="" maxlength="150" readonly>
                         </div>
                     </div>
