--- a/comprasTable/templates/Reportes/cabeza.html
+++ b/comprasTable/templates/Reportes/cabeza.html
@@ -84,51 +84,62 @@
 <input type="text" class="form-control" id="nombreUsuario" name="nombreUsuario" value={{NombreUsuario}}>
 <input type="hidden" class="form-control" id="nombreSede" name="nombreSede" value={{ NombreSede }}>
 
+<div class="row">
+    <div class="col-lg-12">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Mision</a>
+                        <a class="nav-link"
+                           href="/Solicitudes/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Solicitudes</a>
+                        <a class="nav-link"
+                           href="/ValidacionConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Validacion</a>
+                        <a class="nav-link"
+                           href="/AlmacenConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Notif.Almacen</a>
+                        <a class="nav-link"
+                           href="/ComprasConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Notif.Compras</a>
+                        <a class="nav-link"
+                           href="/ordenesDeCompra/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Ordenes
+                            de Compra</a>
 
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Mision</a>
-                <a class="nav-link" href="/Solicitudes/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Solicitudes</a>
-                <a class="nav-link" href="/ValidacionConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Validacion</a>
-                <a class="nav-link" href="/AlmacenConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Notif.Almacen</a>
-                <a class="nav-link" href="/ComprasConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Notif.Compras</a>
-                <a class="nav-link" href="/ordenesDeCompra/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Ordenes de Compra</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            </div>
+                        </li>
+
+
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="/salir">Salir</a>
 
                     </div>
-                </li>
-
-
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                <a class="nav-link" href="/salir">Salir</a>
-
+                </div>
             </div>
-        </div>
+        </nav>
     </div>
-</nav>
+</div>
 
+<!-- <div  class="container mt-1">  -->
 
-<div class="container mt-1">
-    <!-- <div class="row" style=" width:1600px; height: 90px;"> -->
-
-    <div class="col-lg-12">
+<div >
+      <div class="row" style="width:100%">
+          <div class="col-lg-1"></div>
+    <div class="col-lg-11">
         <!--   <div class="mx-auto" style="width: 1300px; height: 60px; background-color:#352F5C " >  -->
       <!--   <div class="mx-auto" style="height: 70px;  background-color:#352F5C "> -->
-       <!--      <center> ->
+       <!--      <center> -->
          <!--        <figure class="figure"> -->
 
           <!--           <figcaption class="figure-caption text-center"> -->
@@ -160,7 +171,10 @@
             {% block content %}
 
             {% endblock %}
-        </div>
+
+         </div>  <!-- Deberia terminar el COL11-->
+            <div class="col-lg-1"></div>
+  </div> <!-- Deberia terminar el Row-->
 
         <div class="row">
             <div class="col-lg-5"></div>
@@ -177,7 +191,11 @@
             <div class="col-lg-5"></div>
         </div>
 
-    </div>  <!-- Deberia terminar el COL12 -->
+
+
+          </div>  <!-- Deberia cerrar la row inicial-->
+           <!-- <div class="row">  Deberia cerrar la row inicial-->
+
 </div>   <!-- Deberia terminar el container -->
 
 <!--  Esto es Bootstrap -->
