--- a/comprasTable/static/css/panelAdmisiones.css
+++ b/comprasTable/static/css/panelAdmisiones.css
@@ -97,3 +97,9 @@ ul.tabs li a .tab-text{
     height: 200px;
     overflow:scroll;
 }
+.scrollablet
+{
+
+    height: 200px;
+    overflow:scroll;
+}
