--- a/comprasTable/templates/accesoPrincipal.html
+++ b/comprasTable/templates/accesoPrincipal.html
@@ -84,7 +84,7 @@
     <div id="header">
         <div id="branding">
 
-            <h1 id="site-name"><a href="/admin/">CLINICA MEDICAL - COMPRAS </a></h1>
+            <h1 id="site-name"><a href="/admin/"> MEDICAL - COMPRAS </a></h1>
 
         </div>
 
