--- a/comprasTable/templates/Reportes/Solicitudes.html
+++ b/comprasTable/templates/Reportes/Solicitudes.html
@@ -42,233 +42,222 @@ window.onload = function(){
 <input type="hidden" class="form-control" id="nombreSede" name="nombreSede" value={{ NombreSede }}>
 <br>
 <br>
-<div class="col-lg-2"> </div>
-<div class="col-lg-8">
 
+<div class="col-lg-12">
 
-    <div class="row ">
-
-        <div class="mx-auto" style="height: 45px; background-color:#7B67FA ">
+    <div class="row">
+        <div style=" background-color:#7B67FA ">
             <center>
-                <figure class="figure">
-
-                    <figcaption class="figure-caption text-center">
-
-                        <H4>
-                            <span style="font-style:font-size:5px">
-                                <b>
-                                    <FONT COLOR="white">SOLICITUD DE PEDIDOS PARA COMPRA O SERVICIO </FONT>
-                                </b>
-                            </span>
-
-                        </H4>
-
-                    </figcaption>
-                </figure>
+                <H4>
+                    <span style="font-style:font-size:2px">
+                            <b>
+                           <FONT COLOR="white">  SOLICITUDES  </FONT>
+                            </b>
+                    </span>
+                </H4>
             </center>
-
-
         </div>
+    </div>
 
-
-    </div> <!-- Final Titulos -->
     <br>
 
 
-    <div class="row" >
 
-            <!--   <form class="form-inline" action="/solicitudesCreacion/" method="POST" id="formSolicitudes">  -->
+    <div class="row">
 
-            <div class="row" style=" width:670px; height: 40px; ">
-                <div class="  col-lg-3 "><label for="fecha" class="col-form-label">Fecha Solicitud:</label></div>
-                <div class="  col-lg-1 ">
+        <!--   <form class="form-inline" action="/solicitudesCreacion/" method="POST" id="formSolicitudes">  -->
 
-                    <input type="datetime-local" id="fecha" name="fecha" readonly> </input>
+        <div class="row" >
+            <div class="  col-lg-3 "><label for="fecha" class="col-form-label">Fecha Solicitud:</label></div>
+            <div class="  col-lg-1 ">
 
-                </div>
-                <div class="  col-lg-4 "></div>
-                <div class="  col-lg-3 "><label for="fecha" class="col-form-label">Solicitud No:</label></div>
+                <input type="datetime-local" id="fecha" name="fecha" readonly> </input>
 
-                <div class="col-lg-1 ">
+            </div>
+            <div class="  col-lg-2 "></div>
+            <div class="  col-lg-4 "><label for="id" class="col-form-label">Solicitud No:</label></div>
 
-                    <input type="text" id="id" name="id" value="" size="14" readonly></input>
-                </div>
+            <div class="col-lg-2 ">
 
-            </div> <!-- Fin Primera Fila -->
+                <input type="text" id="id" name="id" value="" style=" background-color: cyan" size="14" readonly></input>
+            </div>
 
-            <div class="row" style=" width:670px;height: 40px;  ">
-                <div class="  col-lg-3 "><label for="coord" class="col-form-label">Coordinador:</label></div>
-                <div class=" col-lg-9 ">
-                    <input type="text" id="coord" name="coord" size="75" value="{{NombreUsuario}}" readonly></input>
-                </div>
+        </div> <!-- Fin Primera Fila -->
 
-            </div> <!-- Fin Segunda Fila -->
+        <!-- Inicio segunda Fila -->
 
-            <div class="row" style=" width:670px; height: 40px;  ">
+        <div class="row" >
+            <div class="  col-lg-3 "><label for="coord" class="col-form-label">Coordinador:</label></div>
+            <div class=" col-lg-9 ">
+                <input type="text" id="coord" name="coord" size="123" value="{{NombreUsuario}}" readonly></input>
+            </div>
 
-                <div class="col-lg-3 "><label for="sede" class="col-form-label">Sede:</label></div>
-                <div class="col-lg-3 ">
+        </div> <!-- Fin Segunda Fila -->
 
-                    <input type="text" id="sede" name="sede" size="30" value="{{NombreSede}}" readonly></input>
-                </div>
+        <!-- Inicia tercera Fila -->
 
-                <div class="  col-lg-2 "></div>
+        <div class="row" >
 
-                <div class="  col-lg-1 "><label for="areat" class="col-form-label">Area:</label></div>
-                <div class="  col-lg-3 ">
-                    <select class="form-control" id="areat" name="areat" style="width:262px;" size="1">
-                        {% for areas in Areas %}
-                        <option value="{{areas.id}}"> {{areas.area}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-            </div> <!-- Fin Tercera Fila -->
+            <div class="col-lg-3 "><label for="sede" class="col-form-label">Sede:</label></div>
+            <div class="col-lg-3 ">
 
-            <br>
-            <!-- Aqui los items para Adicionar a la tabla-->
+                <input type="text" id="sede" name="sede" size="30" value="{{NombreSede}}" readonly></input>
+            </div>
 
-            <div class="row" style=" width:670px; height: 40px; ">
+            <div class="  col-lg-2 "></div>
 
-                <div class="  col-lg-2 "><label for="descripcion" class="col-form-label">Descripcion:</label></div>
-                <div class="  col-lg-2 ">
-                    <select class="form-control" id="descripcion" name="descripcion" style=" width:110px; " size="1">
-                        {% for descripcionescompra in Descripcionescompra %}
-                        <option value="{{descripcionescompra.id}}"> {{descripcionescompra.nombre}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
+            <div class="  col-lg-1 "><label for="areat" class="col-form-label">Area:</label></div>
+            <div class="  col-lg-3 ">
+                <select class="form-control" id="areat" name="areat" style="width:262px;" size="1">
+                    {% for areas in Areas %}
+                    <option value="{{areas.id}}"> {{areas.area}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div> <!-- Fin Tercera Fila -->
 
 
-                <div class="  col-lg-1"><label for="tipo" class="col-form-label">Tipo:</label></div>
+        <!-- Aqui los items para Adicionar a la tabla-->
 
-                <div class="  col-lg-2 ">
-                    <select class="form-control" id="tipo" name="tipo" style=" width:110px; " size="1">
-                        {% for tiposCompra in TiposCompra %}
-                        <option value="{{tiposCompra.id}}"> {{tiposCompra.nombre}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
+        <!--Inicio Cuarta Fila -->
 
+        <div class="row" >
 
-                <div class="  col-lg-2 "><label for="producto" class="col-form-label"> &nbsp; Producto:</label></div>
-
-
-                <div class="  col-lg-2 ">
-                    <select class="form-control" id="producto" name="producto" style=" width:262px; " size="1">
-                        {% for articulos in Articulos %}
-                        <option value="{{articulos.codreg_articulo}}"> {{articulos.articulo}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-
-            </div> <!-- Fin Cuarta Fila -->
-
-            <div class="row" style=" width:670px; height: 40px;  ">
-                <div class="  col-lg-2 "><label for="presentacion" class="col-form-label">Presentacion:</label></div>
-
-                <div class="  col-lg-1 ">
-                    <select class="form-control" id="presentacion" name="presentacion" style=" width:80px; " size="1">
-                        {% for presentacion in Presentacion %}
-                        <option value="{{presentacion.id}}"> {{presentacion.nombre}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-
-                <div class="  col-lg-1 "></div>
+            <div class="  col-lg-3 "><label for="descripcion" class="col-form-label">Descripcion:</label></div>
+            <div class="  col-lg-2 ">
+                <select class="form-control" id="descripcion" name="descripcion" style=" width:110px; " size="1">
+                    {% for descripcionescompra in Descripcionescompra %}
+                    <option value="{{descripcionescompra.id}}"> {{descripcionescompra.nombre}}</option>
+                    {% endfor %}
+                </select>
+            </div>
 
 
-                <div class="  col-lg-3 ">
-                    <label for="cantidad" class="col-form-label">Cantidad:</label>
-                    <input type="text" id="cantidad" name="cantidad" value="0" size="2"> </input>
+            <div class="  col-lg-1"><label for="tipo" class="col-form-label">Tipo:</label></div>
 
-                </div>
-
-
-                <div class="  col-lg-4 ">
-                    <label for="justificacion" class="col-form-label"> Justif:</label>
-                    <input type="text" id="justificacion" name="justificacion" size="10"> </input>
-
-                </div>
+            <div class="  col-lg-2 ">
+                <select class="form-control" id="tipo" name="tipo" style=" width:110px; " size="1">
+                    {% for tiposCompra in TiposCompra %}
+                    <option value="{{tiposCompra.id}}"> {{tiposCompra.nombre}}</option>
+                    {% endfor %}
+                </select>
+            </div>
 
 
-                <div class=" col-lg-1 ">
-                    <input type="button" class="button" id="btnAdicion" name="btnAdicion" value="Adicionar"
-                           alt="Submit"> </input>
-                </div>
-            </div> <!-- Fin Quinta Fila -->
+            <div class="  col-lg-1 "><label for="producto" class="col-form-label"> &nbsp; Producto:</label></div>
 
 
+            <div class="  col-lg-2 ">
+                <select class="form-control" id="producto" name="producto" style=" width:262px; " size="1">
+                    {% for articulos in Articulos %}
+                    <option value="{{articulos.codreg_articulo}}"> {{articulos.articulo}}</option>
+                    {% endfor %}
+                </select>
+            </div>
 
-        <!-- hasta aqui Cabecera -->
-        <!-- La tabla-->
+        </div> <!-- Fin Cuarta Fila -->
 
+        <div class="row" >
+            <div class="  col-lg-3 "><label for="presentacion" class="col-form-label">Presentacion:</label></div>
+
+            <div class="  col-lg-2 ">
+                <select class="form-control" id="presentacion" name="presentacion" style=" width:110px; " size="1">
+                    {% for presentacion in Presentacion %}
+                    <option value="{{presentacion.id}}"> {{presentacion.nombre}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
+
+            <div class="  col-lg-3 ">
+                <label for="cantidad" class="col-form-label">Cantidad:</label>
+                <input type="text" id="cantidad" name="cantidad" value="0" size="15"> </input>
+
+            </div>
+
+
+            <div class="  col-lg-4 ">
+                <label for="justificacion" class="col-form-label"> Justif:</label>
+                <input type="text" id="justificacion" name="justificacion" size="39"> </input>
+
+            </div>
+
+        </div> <!-- Fin Quinta Fila -->
         <br>
-        <br>
-        <br>
+             <br>
+             <br>
+
+        <!-- Inicia sexta Fila -->
+        <div class="row" >
+            <div class=" col-lg-4 "></div>
+            <div class=" col-lg-1 ">
+                <input type="button" class="button" size="30px" id="btnAdicion" name="btnAdicion" value="Adicionar"> </input>
+                </div>
+              <div class=" col-lg-4 "></div>
+         </div>
+        <!-- Fin sexta Fila -->
 
 
-        <div class="row" style=" width:670px;  height: 40px; ">
+    </div>
 
+    <!-- hasta aqui Cabecera -->
 
+    <!-- La tabla-->
 
-                    <div id="noTomar1" class="scrollable" align="center">
-                        <center>
-                            <table cellspacing="0" width="100%" class="table  table-fixed " id="tablaSolicitud">
-
-                                <thead>
-                                <tr>
-                                    <!-- <th data-visible="false"></th>  -->
-                                    <th style="width:20%">Descripcion</th>
-                                    <th style="width:20%">Tipo</th>
-                                    <th style="width:20%">Producto</th>
-                                    <th style="width:20%">Presentacion</th>
-                                    <th style="width:10%">Cantidad</th>
-                                    <th style="width:20%">Justificacion</th>
-                                    <th class="col-xs-1"> BORRAR</th>
-                                    <th data-visible="false"></th>
-
-                                </tr>
-                                </thead>
-                                <tbody>
-
-                                </tbody>
-                                <tfoot>
-                                </tfoot>
-                            </table>
-                        </center>
-                    </div>
-
-
-                <div> <!-- Fin col Tabla-->
-
-
-                </div> <!-- Fin Row de tabla -->
-
-
-                <div class="row" style=" width:670px;  height: 40px; ">
-                    <div class="col-lg-5 "></div>
-
-                    <!--  <div class="col-lg-1 bg-info text-white"> -->
-                    <div class="col-lg-1 ">
-                        <br>
-                        <input type="button" class="button1" id="btnSolCrea" name="btnSolCrea" value="Enviar"
-                               onclick="guardarSolicitud()"></input>
-
-                    </div>
-                    <div class="col-lg-2 "></div>
-
-                    <div class="col-lg-4 ">
-                        <span id="mensajes" name="mensajes" size="200px" style="color: red"> </span>
-                    </div>
-                </div>   <!-- Fin de oytra row -->
-                <!--   </form>  -->
+    <br>
 
 
 
+    <div class="row">
+        <div class="col-lg-12">
+            <div id="noTomar1" class="scrollable" align="center">
+                <center>
+                    <table cellspacing="0"  class="table  table-bordered table-fixed " id="tablaSolicitud" >
 
-        </div> <!-- Debe ser el fin del row principal ?? -->
-        <div class="col-lg-2"> </div>
-    </div>  <!-- termina el col 12 -->
+                        <thead>
+                        <tr>
+                            <!-- <th data-visible="false"></th>  -->
+                            <th style="width:15%">Descripcion</th>
+                            <th style="width:15%">Tipo</th>
+                            <th style="width:15%">Producto</th>
+                            <th style="width:20%">Presentacion</th>
+                            <th style="width:5%">Cantidad</th>
+                            <th style="width:30%">Justificacion</th>
+                            <th class="col-xs-1"> BORRAR</th>
+                            <th data-visible="false"></th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                        <tfoot>
+                        </tfoot>
+                    </table>
+                </center>
+            </div>
+        </div> <!-- Fin Col12  de tabla -->
+
+    </div> <!-- Fin Row de tabla -->
+
+                <!-- Inicia sexta Fila -->
+    <div class="row">
+        <div class=" col-lg-5 "></div>
+        <div class=" col-lg-1 ">
+            <input type="button" class="button1" heigth="200px" id="btnSolCrea" name="btnSolCrea" value="Enviar"
+                   onclick="guardarSolicitud()"></input>
+
+            </div>
+            <div class=" col-lg-3 ">
+
+            </div>
+        <div class=" col-lg-3 ">
+            <span id="mensajes" name="mensajes" size="50px" style="color: red"> </span>
+        </div>
+        <!-- Fin sexta Fila -->
+    </div>
+
+</div>  <!-- termina el col 12 -->
 
 
 {% endblock %}
