--- a/comprasTable/templates/Reportes/cabeza.html
+++ b/comprasTable/templates/Reportes/cabeza.html
@@ -122,16 +122,18 @@
                         <a class="nav-link"
                            href="/ordenesCompra/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Ordenes
                             de Compra</a>
-                        <a class="nav-link"
-                           href="/solicitudesConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Consulta
-                            </a>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
+                                CONSULTAS
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="/solicitudesConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Solicitudes</a>
+                                    <a class="dropdown-item" href="/ordenesCompraConsulta/{{Username}}, {{SedeSeleccionada}}, {{NombreUsuario}} , {{NombreSede}}">Ordenes de Compra</a>
+                                    <a class="dropdown-item" href="#">...</a>
+                                    </div>
 
                             </div>
                         </li>
